Fix word wrap problem in specialthanks page

--- a/style.css
+++ b/style.css
@@ -14,7 +14,13 @@ table {
     -ms-overflow-style: -ms-autohiding-scrollbar;
 }
 
-td, th {
+iframe {
+    width: 100%;
+    height: 600px;
+    margin-top: 20px;
+}
+
+#table_members td, th {
     width: 200px;
     font-size: 18px;
     padding: 5px 1px 5px 1px;
@@ -29,14 +35,15 @@ tr {
     color: white;
 }
 
-tr:hover {
+#members_table tr:hover {
     opacity: 0.8;
 }
 
-iframe {
-    width: 100%;
-    height: 600px;
-    margin-top: 20px;
+#table_specialthanks td, th {
+    width: 300px;
+    text-align: center;
+    font-size: 20px;
+    padding: 4px 2px 4px 2px;
 }
 
 #head {
@@ -125,6 +132,13 @@ iframe {
     margin: 20px 0 20px 10px;
     font-size: 30px;
     color: white;
+}
+
+#title_specialthanks {
+    color: white;
+    font-family: 'Noto Sans TC', sans-serif;
+    margin: 20px 0 40px 20px;
+    text-align: center;
 }
 
 #banner {
@@ -230,7 +244,7 @@ iframe {
 .box {
     overflow: hidden;
     margin: auto 0 auto 0;
-    min-height: 80vh;
+    height: 85vh;
 }
 
 .box div {
@@ -286,6 +300,12 @@ iframe {
     }
 }
 
+@media only screen and (max-width: 900px) {
+    #table_specialthanks td, th {
+        font-size: 14px;
+    }
+}
+
 @media only screen and (max-width: 600px) {
     #banner {
         margin-top: 80px;
@@ -300,6 +320,15 @@ iframe {
         font-size: 25px;
     }
     td, th {
+        font-size: 14px;
+    }
+    #table_specialthanks td, th {
+        font-size: 17px;
+    }
+}
+
+@media only screen and (max-width: 420px) {
+    #table_specialthanks td, th {
         font-size: 14px;
     }
 }
@@ -323,5 +352,11 @@ iframe {
     }
     #hotel {
         width: 80vw;
+    }
+}
+
+@media only screen and (max-width: 350px) {
+    #table_specialthanks td, th {
+        font-size: 10px;
     }
 }
